--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.userContainer {
+    display: flex;
+    margin-top: 2em;
+    border: 1px solid pink;
+    padding: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.updateButton {
+    color: hsla(0, 0%, 100%, 0.9);
+    background: hsla(350, 85%, 79%, 0.7);
+    padding-block: 0.1rem;
+    padding-inline: 0.5rem;
+    padding-block: 0.4rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    font-size: medium;
+    border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.deleteButton {
+    color: hsla(0, 0%, 100%, 0.9);
+    background: hsla(350, 82%, 78%, 0.7);
+    padding-block: 0.1rem;
+    padding-inline: 0.5rem;
+    padding-block: 0.4rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    font-size: medium;
+    border: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submitButton {
+    color: hsla(0, 0%, 100%, 0.9);
+    background: hsla(350, 82%, 78%, 0.7);
+    padding-block: 0.1rem;
+    padding-inline: 0.5rem;
+    padding-block: 0.4rem;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    font-size: medium;
+    border: none;
 }
